# Base64

./: CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
Base64/: Base64.sln  Base64.vcxproj  Base64.vcxproj.filters
inc/: Base64.h  base64.hpp
src/: Base64.cpp  CMakeLists.txt
test/: CMakeLists.txt  Main.cpp
test/Base64Test/: Base64Test.cpp  Base64Test.vcxproj  Base64Test.vcxproj.filters  stdafx.cpp
